[add] city buttons & fix alignments

--- a/src/app/components/map-radio/map-radio.component.scss
+++ b/src/app/components/map-radio/map-radio.component.scss
@@ -7,3 +7,7 @@
 .radio-button {
   margin: 5px;
 }
+
+app-map-radio {
+  margin: 0 20px;
+}
